# MasterThesis

./: .gitignore  CCFGIllustrator.hpp  CMakeLists.txt  CSSA_CFG.hpp  DST.cpp  DST.h  DST.hpp  ImageVisitor.cpp  ImageVisitor.h  README.md  SSA_CCFG.hpp  Small.g4  basicblockTreeConstructor.hpp  code.small  decoratedTree.hpp  dominatorTreeConstructor.hpp  lengauerTarjan.hpp  main.cpp  nodeptr_test.small  nodetype.hpp  precendenceTest.small  scope.hpp  statementsTransformer.hpp  symbol.hpp  temp.small  test.hpp  tokens.g4
DrawCCFG/: CCFGNode.cpp  CCFGNode.hpp
antlr4-runtime/: RuleContext.h  Small.interp  SmallBaseVisitor.cpp  SmallBaseVisitor.h  SmallLexer.cpp  SmallLexer.h  SmallLexer.interp  SmallLexer.tokens  SmallParser.cpp  SmallParser.h  SmallVisitor.cpp  SmallVisitor.h
code_examples/: array.small  bubblesort.small  coffee_maker.small  concurrency.small  constraint_test.small  idomTest.small  if_test.small  multiple_paths.small  nodeptr_test.small  out_of_bounds.small  out_of_bounds_race-condition.small  phiTest.small  precendenceTest.small  race_condition.small  report_example.small  shortExpr.small  testAssign.small  testUnwrap.small  tripple_maker.small  while_unroll_test.small
code_examples/rapport/: event.small  if.small  pi-example-problem.small
code_examples/test_programs/: coffe_maker_duo.small  coffe_maker_duo_event_based.small  coffe_maker_inner_while.small  coffe_maker_outer_while.small  coffe_maker_trio_event_based.small  event_test.small  if-false-not-possible.small  multiple_uses_in_concnode.small  nested_forks.small  small_concurrent_events.small  statements_after_event.small  unreachable.small  while_unroll_test.small
nodes/: additionNode.hpp  arrayAccessNode.hpp  arrayLiteralNode.hpp  assignNode.hpp  assignmentNode.h  basicblock.cpp  basicblock.hpp  declarationNode.h  declarationNode.hpp  divisionNode.hpp  edge.cpp  edge.hpp  expressionNode.hpp  functionCallNode.hpp  functionDeclarationNode.h  functionDeclarationNode.hpp  ifElseNode.h  literalNode.hpp  moduloNode.hpp  multiplicationNode.hpp  nameNode.hpp  node.hpp  nodes.hpp  programNode.hpp  scopeNode.hpp  subtractionNode.hpp  variableNode.hpp
nodes/expressions/: arrayAccessNode.hpp  arrayLiteralNode.hpp  binaryExpressionNode.hpp  constraintNode.hpp  expressionNode.hpp  expressionNodes.hpp  literalNode.hpp  phiNode.hpp  readNode.cpp  readNode.hpp  unaryExpressionNode.hpp  unpacked.hpp  variableNode.hpp
nodes/expressions/binaryExpressions/: additionNode.hpp  binaryExpressionNode.hpp  binaryExpressionNodes.hpp  divisionNode.hpp  equalNode.hpp  greaterEqualNode.hpp  greaterThanNode.hpp  lessEqualNode.hpp  lessThanNode.hpp  moduloNode.hpp  multiplicationNode.hpp  notEqualNode.hpp  orNode.hpp  subtractionNode.hpp
nodes/expressions/binaryOperators/: additionNode.hpp  divisionNode.hpp  equalNode.h  greaterEqualNode.h  greaterThanNode.h  lessEqualNode.h  lessThanNode.h  moduloNode.hpp  multiplicationNode.hpp  notOrNode.h  orNode.h  subtractionNode.hpp
nodes/expressions/unaryExpressions/: negationNode.hpp
nodes/statements/: arrayFieldAssignNode.hpp  assertNode.hpp  assignNode.hpp  concurrentNode.hpp  endConcNode.hpp  eventNode.hpp  fiNode.hpp  ifElseNode.hpp  option.hpp  phiNode.hpp  piNode.hpp  readNode.hpp  sequentialNode.hpp  skipNode.hpp  statementNode.hpp  statementNodes.hpp  unpackedstmt.hpp  whileNode.hpp  writeNode.hpp
src/: CCFGIllustrator.hpp
src/CFGs/: CCFG.hpp  CSSA_CCFG.hpp  SSA_CCFG.hpp
src/nodes/: basicblock.cpp  basicblock.hpp  edge.hpp  node.hpp  nodes.hpp
src/nodes/expressions/: arrayAccessNode.hpp  arrayLiteralNode.hpp  binaryExpressionNode.hpp  expressionNode.hpp  expressionNodes.hpp  readNode.cpp  readNode.hpp  unaryExpressionNode.hpp
src/nodes/statements/: arrayFieldAssignNode.hpp  assignNode.hpp  endConcNode.hpp  eventNode.hpp  fiNode.hpp  ifElseNode.hpp  phiNode.hpp  piNode.hpp  sequentialNode.hpp  skipNode.hpp  statementNode.hpp  statementNodes.hpp  unpackedstmt.hpp  whileNode.hpp  writeNode.hpp
src/symengine/: Constraint.hpp  Difference.hpp  VariableValue.hpp  intepreterData.hpp  interpreter.cpp  interpreter.hpp  state.cpp  state.hpp  stateQueue.hpp  stateStack.hpp  statesHandler.cpp  statesHandler.hpp  symEngine.cpp  symEngine.hpp  symbolicExecutionEngine.hpp  trace.cpp  trace.hpp  value.hpp
src/transformers/: CSSA_CFG.hpp  CSSA_transformer.hpp  DST.cpp  DST.hpp  SSA_CCFG.hpp  SSA_transformer.hpp  basicblockTreeConstructor.hpp  dominatorTreeConstructor.hpp  lengauerTarjan.hpp  statementsTransformer.hpp
symengine/: Constraint.hpp  Difference.hpp  VariableValue.hpp  expressionVisitor.hpp  intepreterData.hpp  interpreter.cpp  interpreter.hpp  loopUnrolling.hpp  state.cpp  state.hpp  statesHandler.cpp  statesHandler.hpp  symEngine.cpp  symEngine.hpp  symbolTable.hpp  symbolicExecutionEngine.hpp  trace.hpp  value.hpp  variable.hpp
